// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NameField /> component should render correctly when required 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      aria-required={true}
      autoCapitalize="words"
      autoComplete="name"
      autoCorrect="off"
      autoFocus={false}
      className="MuiInputBase-input MuiInput-input"
      data-name="name"
      disabled={false}
      id="name"
      inputMode="latin-name"
      maxLength={50}
      minLength={5}
      name="name"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={true}
      size={50}
      tabIndex={0}
      type="text"
    />
  </div>
</div>
`;

exports[`<NameField /> component should render correctly with no props 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      autoCapitalize="words"
      autoComplete="name"
      autoCorrect="off"
      autoFocus={false}
      className="MuiInputBase-input MuiInput-input"
      data-name="name"
      disabled={false}
      id="name"
      inputMode="latin-name"
      maxLength={50}
      minLength={5}
      name="name"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      size={50}
      tabIndex={0}
      type="text"
    />
  </div>
</div>
`;

exports[`<NameField /> component should render correctly with no required 1`] = `
<div
  className="MuiFormControl-root MuiTextField-root"
>
  <div
    className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
    onClick={[Function]}
  >
    <input
      aria-invalid={false}
      aria-required={false}
      autoCapitalize="words"
      autoComplete="name"
      autoCorrect="off"
      autoFocus={false}
      className="MuiInputBase-input MuiInput-input"
      data-name="name"
      disabled={false}
      id="name"
      inputMode="latin-name"
      maxLength={50}
      minLength={5}
      name="name"
      onAnimationStart={[Function]}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      size={50}
      tabIndex={0}
      type="text"
    />
  </div>
</div>
`;
